<resources>
    <string name="app_name">App_Profil</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="telp">Telp.</string>
    <string name="alamat">Alamat</string>
    <string name="simpan">Simpan</string>
    <string name="name">Name:</string>
    <string name="gender">Gender:</string>
    <string-array name="gender_list">
        <item>Pilih kelamin</item>
        <item>Laki-laki</item>
        <item>Perempuan</item>
    </string-array>
</resources>