<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical">
        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="text"
            android:imeOptions="actionNext" android:fontFamily="casual"/>
        <Spinner
            android:layout_marginTop="16dp"
            android:id="@+id/spinnerGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender_list"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/edtEmail"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="textEmailAddress"
            android:imeOptions="actionNext" android:fontFamily="casual"/>
        <EditText
            android:id="@+id/edtTelp"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telp"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="number"
            android:imeOptions="actionNext" android:fontFamily="casual"/>
        <EditText
            android:id="@+id/edtAddress"
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/alamat"
            android:textColorHint="#CCCCCC"
            android:textColor="#000000"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:imeOptions="actionDone" android:fontFamily="casual"/>
        <Button
            android:id="@+id/btnSave"
            android:layout_marginTop="24dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan" android:fontFamily="casual"
            android:textStyle="bold"/>

    </LinearLayout>
</LinearLayout>